package com.vajraedge.worker;

import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

import java.util.List;
import java.util.concurrent.TimeUnit;

/**
 * gRPC client for communicating with the controller.
 * 
 * <p>Handles:
 * <ul>
 *   <li>Worker registration/unregistration</li>
 *   <li>Task assignment receiving</li>
 *   <li>Metrics reporting</li>
 *   <li>Heartbeat messages</li>
 * </ul>
 * 
 * <p>Note: This is a stub implementation. Full gRPC integration
 * will be implemented in Item 9 (Distributed Testing) with proper
 * protocol buffer definitions.
 *
 * @since 2.0.0
 */
public class GrpcClient {
    
    private static final Logger log = LoggerFactory.getLogger(GrpcClient.class);
    
    private final String controllerAddress;
    private volatile boolean connected;
    
    /**
     * Create a new gRPC client.
     *
     * @param controllerAddress Controller address (host:port)
     */
    public GrpcClient(String controllerAddress) {
        this.controllerAddress = controllerAddress;
        this.connected = false;
    }
    
    /**
     * Connect to the controller.
     *
     * @throws Exception if connection fails
     */
    public void connect() throws Exception {
        log.info("Connecting to controller: {}", controllerAddress);
        
        // TODO: Implement actual gRPC channel creation
        // ManagedChannel channel = ManagedChannelBuilder
        //     .forTarget(controllerAddress)
        //     .usePlaintext()
        //     .build();
        
        // Simulate connection
        Thread.sleep(100);
        connected = true;
        
        log.info("Connected to controller");
    }
    
    /**
     * Disconnect from the controller.
     */
    public void disconnect() {
        if (!connected) {
            return;
        }
        
        log.info("Disconnecting from controller");
        
        // TODO: Implement actual channel shutdown
        // channel.shutdown();
        // channel.awaitTermination(5, TimeUnit.SECONDS);
        
        connected = false;
        log.info("Disconnected from controller");
    }
    
    /**
     * Register worker with the controller.
     *
     * @param workerId Worker identifier
     * @param capabilities Available task types
     * @param maxConcurrency Maximum concurrent tasks
     * @throws Exception if registration fails
     */
    public void registerWorker(String workerId, List<String> capabilities, int maxConcurrency) 
            throws Exception {
        log.info("Registering worker: id={}, capabilities={}, maxConcurrency={}", 
            workerId, capabilities, maxConcurrency);
        
        // TODO: Implement actual gRPC call
        // RegisterWorkerRequest request = RegisterWorkerRequest.newBuilder()
        //     .setWorkerId(workerId)
        //     .addAllCapabilities(capabilities)
        //     .setMaxConcurrency(maxConcurrency)
        //     .build();
        // 
        // RegisterWorkerResponse response = stub.registerWorker(request);
        
        // Simulate registration
        Thread.sleep(50);
        
        log.info("Worker registered successfully");
    }
    
    /**
     * Unregister worker from the controller.
     *
     * @param workerId Worker identifier
     */
    public void unregisterWorker(String workerId) {
        log.info("Unregistering worker: {}", workerId);
        
        try {
            // TODO: Implement actual gRPC call
            // UnregisterWorkerRequest request = UnregisterWorkerRequest.newBuilder()
            //     .setWorkerId(workerId)
            //     .build();
            // 
            // stub.unregisterWorker(request);
            
            // Simulate unregistration
            Thread.sleep(50);
            
            log.info("Worker unregistered successfully");
        } catch (Exception e) {
            log.error("Failed to unregister worker", e);
        }
    }
    
    /**
     * Send metrics to controller.
     *
     * @param workerId Worker identifier
     * @param metrics Worker metrics
     */
    public void sendMetrics(String workerId, WorkerMetrics metrics) {
        if (!connected) {
            log.warn("Cannot send metrics: not connected to controller");
            return;
        }
        
        log.debug("Sending metrics: workerId={}, completedTasks={}, activeTasks={}", 
            workerId, metrics.completedTasks(), metrics.activeTasks());
        
        // TODO: Implement actual gRPC call
        // MetricsRequest request = MetricsRequest.newBuilder()
        //     .setWorkerId(workerId)
        //     .setCompletedTasks(metrics.completedTasks())
        //     .setFailedTasks(metrics.failedTasks())
        //     .setActiveTasks(metrics.activeTasks())
        //     .build();
        // 
        // stub.sendMetrics(request);
    }
    
    /**
     * Send heartbeat to controller.
     *
     * @param workerId Worker identifier
     */
    public void sendHeartbeat(String workerId) {
        if (!connected) {
            log.warn("Cannot send heartbeat: not connected to controller");
            return;
        }
        
        log.trace("Sending heartbeat: workerId={}", workerId);
        
        // TODO: Implement actual gRPC call
        // HeartbeatRequest request = HeartbeatRequest.newBuilder()
        //     .setWorkerId(workerId)
        //     .setTimestamp(System.currentTimeMillis())
        //     .build();
        // 
        // stub.sendHeartbeat(request);
    }
    
    /**
     * Check if connected to controller.
     *
     * @return true if connected
     */
    public boolean isConnected() {
        return connected;
    }
}
